xtask/src/commands/changeset/snapshots/xtask__commands__changeset__tests__it_templatizes_with_neither_issues_or_prs.snap
---
source: src/commands/changeset/mod.rs
expression: rendered_template
---
### TITLE

BODY

By [@AUTHOR](https://github.com/AUTHOR)

